turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:7: error: value % is not a member of java.awt.Color
       setCouleurBrosse(colors(x+1)%colors.length);baisseBrosse();leveBrosse()
                                   ^